Source/RBNio/RBNParser2.java
/* Generated By:JavaCC: Do not edit this line. RBNParser2.java */
package RBNio;

import RBNpackage.*;
import java.util.*;
import myio.StringOps;
import RBNExceptions.RBNSyntaxException;

public class RBNParser2 implements RBNParser2Constants {
        private int parseno = 1;
        private RBNReader2 reader;

  final public void ReadRBN() throws ParseException {
    label_1:
    while (true) {
      if (jj_2_1(3)) {
        MacroDefinition();
      } else if (jj_2_2(3)) {
        ProbRelDefinition();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      if (jj_2_3(3)) {
        ;
      } else {
        break label_1;
      }
    }
  }

  final public void MacroDefinition() throws ParseException {
 RBNReader2.ParsedTypedAtom parsedat;
 ProbForm parsedprobform;
    jj_consume_token(9);
    parsedat = TypedAtom();
    jj_consume_token(10);
    parsedprobform = ProbForm();
    jj_consume_token(11);
         switch  (parseno){
        case 1:
                reader.addMacroDefined(reader.new ProbRelDef(parsedat,null));
                break;
        case 2:
                reader.setMacroPF(parsedat.rel(),parsedprobform);
        }
  }

  final public void ProbRelDefinition() throws ParseException {
 RBNReader2.ParsedTypedAtom parsedat;
 ProbForm parsedprobform;
    // grammar
            parsedat = TypedAtom();
    jj_consume_token(10);
    parsedprobform = ProbForm();
    jj_consume_token(11);
         switch  (parseno){
                case 1:
                        reader.addProbRelDefined(reader.new ProbRelDef(parsedat,null));
                        break;
                case 2:
                reader.setProbRelPF(parsedat.rel(),parsedprobform);
        }
  }

  final public ProbForm ProbForm() throws ParseException {
 ProbForm parsedpf;
    if (jj_2_4(3)) {
      parsedpf = Constant();
    } else if (jj_2_5(2147483647)) {
      parsedpf = Atom();
    } else if (jj_2_6(2147483647)) {
      parsedpf = ConvCombination();
    } else if (jj_2_7(2147483647)) {
      parsedpf = CombinationFunc();
    } else if (jj_2_8(3)) {
      parsedpf = BoolFormula();
    } else if (jj_2_9(3)) {
      parsedpf = MacroCall();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
         {if (true) return parsedpf;}
    throw new Error("Missing return statement in function");
  }

  final public RBNReader2.ParsedUnTypedAtom UntypedAtom() throws ParseException {
  Vector<String> args;
  Token tok;
  Rel rel;
    // grammar
            tok = jj_consume_token(Name);
    args = UntypedArguments();
         rel = new Rel(tok.image,args.size());
         {if (true) return reader.new ParsedUnTypedAtom(rel,args);}
    throw new Error("Missing return statement in function");
  }

  final public RBNReader2.ParsedTypedAtom TypedAtom() throws ParseException {
        Token tok;
        RBNReader2.ParsedTypedArguments args;
        BoolRel rel;
        int arity;
        String relname;
    // grammar
            tok = jj_consume_token(Name);
         relname = tok.image;
    args = TypedArguments();
         arity = args.arity();
         rel = new BoolRel(relname,arity,args.types());
         {if (true) return  reader.new ParsedTypedAtom(rel,args);}
    throw new Error("Missing return statement in function");
  }

  final public Vector<String> UntypedArguments() throws ParseException {
 Vector<String> parsedargs;
    jj_consume_token(12);
    parsedargs = ArgList();
    jj_consume_token(13);
         {if (true) return parsedargs;}
    throw new Error("Missing return statement in function");
  }

  final public Vector<String> ArgList() throws ParseException {
 Vector<String> parsedargs = new Vector<String>();
 Token tok;
    if (jj_2_11(3)) {
      tok = jj_consume_token(Name);
                 parsedargs.add(tok.image);
      label_2:
      while (true) {
        if (jj_2_10(3)) {
          ;
        } else {
          break label_2;
        }
        jj_consume_token(14);
        tok = jj_consume_token(Name);
                 parsedargs.add(tok.image);
      }
    } else {
      ;
    }
         {if (true) return parsedargs;}
    throw new Error("Missing return statement in function");
  }

  final public RBNReader2.ParsedTypedArguments TypedArguments() throws ParseException {
        Token tok;
        Vector<String> args = new Vector<String>();
        Vector<Type> types = new Vector<Type>();
        String typename = null;
    jj_consume_token(12);
    if (jj_2_15(3)) {
      if (jj_2_12(3)) {
        typename = TypeDeclaration();
      } else {
        ;
      }
                  if (typename != null)
                        {types.add(new TypeRel(typename));
                         typename = null;
                        }
                  else {types.add(new TypeDomain());}
      tok = jj_consume_token(Name);
                 args.add(tok.image);
      label_3:
      while (true) {
        if (jj_2_13(3)) {
          ;
        } else {
          break label_3;
        }
        jj_consume_token(14);
        if (jj_2_14(3)) {
          typename = TypeDeclaration();
        } else {
          ;
        }
                  if (typename != null)
                        {types.add(new TypeRel(typename));
                         typename = null;
                        }
                  else {types.add(new TypeDomain());}
        tok = jj_consume_token(Name);
                 args.add(tok.image);
      }
    } else {
      ;
    }
    jj_consume_token(13);
         {if (true) return reader.new ParsedTypedArguments(types,args);}
    throw new Error("Missing return statement in function");
  }

  final public String TypeDeclaration() throws ParseException {
 Token tok;
    jj_consume_token(15);
    tok = jj_consume_token(Name);
    jj_consume_token(16);
         {if (true) return tok.image;}
    throw new Error("Missing return statement in function");
  }

  final public ProbForm Constant() throws ParseException {
 ProbForm parsedpf;
    if (jj_2_16(3)) {
      parsedpf = NumericConstant();
    } else if (jj_2_17(3)) {
      parsedpf = Parameter();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
         {if (true) return parsedpf;}
    throw new Error("Missing return statement in function");
  }

  final public ProbFormConstant NumericConstant() throws ParseException {
 ProbFormConstant parsedpfconst;
 Token tok;
    // grammar
            tok = jj_consume_token(Constant);
         parsedpfconst = new ProbFormConstant(Double.parseDouble(tok.image));
         {if (true) return parsedpfconst;}
    throw new Error("Missing return statement in function");
  }

  final public ProbFormConstant Parameter() throws ParseException {
 ProbFormConstant parsedpfconst;
 Token tok;
    if (jj_2_18(3)) {
      jj_consume_token(17);
      tok = jj_consume_token(Name);
          {if (true) return new ProbFormConstant("#" + tok.image);}
    } else if (jj_2_19(3)) {
      jj_consume_token(18);
      tok = jj_consume_token(Name);
          {if (true) return new ProbFormConstant("$" + tok.image);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public ProbForm Atom() throws ParseException {
 ProbFormAtom parsedpfatom;
 RBNReader2.ParsedUnTypedAtom parsedutat;
 Rel parsedrel;
 Rel oldrel;
    // grammar
            parsedutat = UntypedAtom();
        switch(parseno){
        case 1:
                reader.addAllRel(parsedutat.rel());
                {if (true) return null;}
                break;
        case 2:
                parsedrel = parsedutat.rel();
                // first need to look into reader.probrelsdefined in order 
                // to ensure that the relation associated with the atom 
                // is of type probabilistic
                oldrel = reader.getProbRel(parsedrel);
                // if the following case triggers, then the relation
                // associated with the atom will be predefined
                if (oldrel == null)
                    oldrel = reader.getAllRel(parsedrel);
                {if (true) return new ProbFormAtom(oldrel,StringOps.stringVectorToArray(parsedutat.args()));}
//	 	if (oldrel != null)
//		   return new ProbFormAtom(oldrel,StringOps.stringVectorToArray(parsedutat.args()));
//	 	else {
//		     oldrel = reader.getAllRel(parsedrel);
//		     return new ProbFormBoolAtom(oldrel,StringOps.stringVectorToArray(parsedutat.args()),true);
//		     }
        }
    throw new Error("Missing return statement in function");
  }

  final public ProbFormConvComb ConvCombination() throws ParseException {
 ProbFormConvComb pf;
    if (jj_2_20(3)) {
      pf = ConvCombinationClassic();
    } else if (jj_2_21(3)) {
      pf = ConvCombinationCherry();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
         switch(parseno){
        case 1:
                {if (true) return null;}
                break;
        case 2: {if (true) return pf;}
        }
    throw new Error("Missing return statement in function");
  }

  final public ProbFormConvComb ConvCombinationClassic() throws ParseException {
 ProbForm pf1;
 ProbForm pf2;
 ProbForm pf3;
    jj_consume_token(12);
    pf1 = ProbForm();
    jj_consume_token(19);
    pf2 = ProbForm();
    jj_consume_token(14);
    pf3 = ProbForm();
    jj_consume_token(13);
         switch(parseno){
        case 1:
                {if (true) return null;}
                break;
        case 2: {if (true) return new ProbFormConvComb(pf1,pf2,pf3);}
        }
    throw new Error("Missing return statement in function");
  }

  final public ProbFormConvComb ConvCombinationCherry() throws ParseException {
 ProbForm pf1;
 ProbForm pf2;
 ProbForm pf3;
    jj_consume_token(WIFWIF);
    pf1 = ProbForm();
    jj_consume_token(WIFTHEN);
    pf2 = ProbForm();
    jj_consume_token(WIFELSE);
    pf3 = ProbForm();
         switch(parseno){
        case 1:
                {if (true) return null;}
                break;
        case 2: {if (true) return new ProbFormConvComb(pf1,pf2,pf3);}
        }
    throw new Error("Missing return statement in function");
  }

  final public ProbFormCombFunc CombinationFunc() throws ParseException {
 ProbFormCombFunc pf;
    if (jj_2_22(3)) {
      pf = CombinationFuncClassic();
    } else if (jj_2_23(3)) {
      pf = CombinationFuncCherry();
    } else if (jj_2_24(2147483647)) {
      pf = CombinationFuncSum();
    } else if (jj_2_25(2147483647)) {
      pf = CombinationFuncProd();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
         switch(parseno){
        case 1:
                {if (true) return null;}
                break;
        case 2: {if (true) return pf;}
        }
    throw new Error("Missing return statement in function");
  }

  final public ProbFormCombFunc CombinationFuncClassic() throws ParseException {
  Token tok;
  Vector<ProbForm> pflist;
  Vector<String> arglist;
  ProbForm[] pfarr;
  ProbFormBool cc = new ProbFormBoolConstant(true);
    // grammar
            tok = jj_consume_token(CombinationFunction);
    jj_consume_token(20);
    pflist = ProbFormList();
    jj_consume_token(21);
    arglist = ArgList();
    jj_consume_token(19);
    if (jj_2_26(3)) {
      cc = BoolFormula();
    } else {
      ;
    }
    jj_consume_token(22);
         switch(parseno){
        case 1:
                {if (true) return null;}
                break;
        case 2:
         pfarr = new ProbForm[pflist.size()];
         for (int i=0;i<pfarr.length;i++)
                pfarr[i]=pflist.elementAt(i);
        {if (true) return new ProbFormCombFunc(tok.image,pfarr,StringOps.stringVectorToArray(arglist),cc);}}
    throw new Error("Missing return statement in function");
  }

  final public ProbFormCombFunc CombinationFuncCherry() throws ParseException {
  Token tok;
  Vector<ProbForm> pflist;
  Vector<String> arglist;
  ProbForm[] pfarr;
  ProbFormBool cc = new ProbFormBoolConstant(true);
    jj_consume_token(COMBCOMB);
    pflist = ProbFormList();
    jj_consume_token(COMBWITH);
    tok = jj_consume_token(CombinationFunction);
    jj_consume_token(COMBFORALL);
    arglist = ArgList();
    if (jj_2_27(3)) {
      jj_consume_token(COMBWHERE);
      cc = BoolFormula();
    } else {
      ;
    }
         switch(parseno){
        case 1:
                {if (true) return null;}
                break;
        case 2:
         pfarr = new ProbForm[pflist.size()];
         for (int i=0;i<pfarr.length;i++)
                pfarr[i]=pflist.elementAt(i);
        {if (true) return new ProbFormCombFunc(tok.image,pfarr,StringOps.stringVectorToArray(arglist),cc);}}
    throw new Error("Missing return statement in function");
  }

  final public ProbFormCombFunc CombinationFuncProd() throws ParseException {
 Vector<ProbForm> pflist = new Vector<ProbForm>();
ProbForm nextpf;
ProbForm[] pfarr;
    jj_consume_token(12);
    nextpf = ProbForm();
         pflist.add(nextpf);
    label_4:
    while (true) {
      jj_consume_token(MULT);
      nextpf = ProbForm();
            pflist.add(nextpf);
      if (jj_2_28(3)) {
        ;
      } else {
        break label_4;
      }
    }
    jj_consume_token(13);
         switch(parseno){
        case 1:
                {if (true) return null;}
                break;
        case 2:
         pfarr = new ProbForm[pflist.size()];
         for (int i=0;i<pfarr.length;i++)
                pfarr[i]=pflist.elementAt(i);
        {if (true) return new ProbFormCombFunc("prod",pfarr,new String[0],new ProbFormBoolConstant(true));}}
    throw new Error("Missing return statement in function");
  }

  final public ProbFormCombFunc CombinationFuncSum() throws ParseException {
 Vector<ProbForm> pflist = new Vector<ProbForm>();
ProbForm nextpf;
ProbForm[] pfarr;
    jj_consume_token(12);
    nextpf = ProbForm();
         pflist.add(nextpf);
    label_5:
    while (true) {
      jj_consume_token(PLUS);
      nextpf = ProbForm();
            pflist.add(nextpf);
      if (jj_2_29(3)) {
        ;
      } else {
        break label_5;
      }
    }
    jj_consume_token(13);
         switch(parseno){
        case 1:
                {if (true) return null;}
                break;
        case 2:
         pfarr = new ProbForm[pflist.size()];
         for (int i=0;i<pfarr.length;i++)
                pfarr[i]=pflist.elementAt(i);
        {if (true) return new ProbFormCombFunc("sum",pfarr,new String[0],new ProbFormBoolConstant(true));}}
    throw new Error("Missing return statement in function");
  }

  final public Vector<ProbForm> ProbFormList() throws ParseException {
 Vector<ProbForm> pflist = new Vector<ProbForm>();
 ProbForm nextpf;
    if (jj_2_31(3)) {
      nextpf = ProbForm();
           pflist.add(nextpf);
      label_6:
      while (true) {
        if (jj_2_30(3)) {
          ;
        } else {
          break label_6;
        }
        jj_consume_token(14);
        nextpf = ProbForm();
           pflist.add(nextpf);
      }
    } else {
      ;
    }
         {if (true) return pflist;}
    throw new Error("Missing return statement in function");
  }

  final public ProbFormBool BoolFormula() throws ParseException {
 ProbFormBool pf;
    if (jj_2_32(2147483647)) {
      pf = BoolAtom();
    } else if (jj_2_33(2147483647)) {
      pf = BoolEquality();
    } else if (jj_2_34(3)) {
      pf = BoolNegation();
    } else if (jj_2_35(2147483647)) {
      pf = BoolAnd();
    } else if (jj_2_36(2147483647)) {
      pf = BoolOr();
    } else if (jj_2_37(3)) {
      pf = BoolConstant();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return pf;}
    throw new Error("Missing return statement in function");
  }

  final public ProbFormBoolAtom BoolAtom() throws ParseException {
 RBNReader2.ParsedUnTypedAtom parsedat;
    // grammar
            parsedat = UntypedAtom();
         {if (true) return new ProbFormBoolAtom(parsedat.rel(),StringOps.stringVectorToArray(parsedat.args()),true);}
    throw new Error("Missing return statement in function");
  }

  final public ProbFormBoolEquality BoolEquality() throws ParseException {
 Token tok1;
 Token tok2;
    // grammar
            tok1 = jj_consume_token(Name);
    jj_consume_token(10);
    tok2 = jj_consume_token(Name);
         {if (true) return new ProbFormBoolEquality(tok1.image,tok2.image,true);}
    throw new Error("Missing return statement in function");
  }

  final public ProbFormBoolComposite BoolAnd() throws ParseException {
 Vector<ProbFormBool> comps=new Vector<ProbFormBool>() ;
ProbFormBool nextpfb;
    jj_consume_token(12);
    nextpfb = BoolFormula();
         comps.add(nextpfb);
    label_7:
    while (true) {
      jj_consume_token(23);
      nextpfb = BoolFormula();
            comps.add(nextpfb);
      if (jj_2_38(3)) {
        ;
      } else {
        break label_7;
      }
    }
    jj_consume_token(13);
 {if (true) return new ProbFormBoolComposite(comps,ProbFormBool.OPERATORAND,true);}
    throw new Error("Missing return statement in function");
  }
